<resources>
    <string name="template_key_string">android.solleks.degreecalculator.TEMPLATE_KEY</string>
    <string name="text_size_key_string">android.solleks.degreecalculator.TEXT_SIZE_KEY</string>
    <string name="degree_number_key_string">android.solleks.degreecalculator.DEGREE_NUMBER_KEY</string>
    <string name="app_name">DegreeCalculator</string>
    <string name="degree">°</string>
    <string name="minute">\'</string>
    <string name="equal">=</string>
    <string name="comma">,</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="clear">C</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="settings">Настройки</string>
    <string name="template_text">Выводить нули в ответе?</string>
    <string name="template">Шаблон</string>
</resources>
