<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:id="@+id/scrollViewMain"
            android:fillViewport="true"
            android:layout_gravity="bottom">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/text_main_padding"
                android:textSize="@dimen/text_main_size"
                android:id="@+id/textMain"/>
        </ScrollView>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:id="@+id/scrollViewResult" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/text_main_padding"
                android:paddingRight="@dimen/text_main_padding"
                android:paddingTop="@dimen/text_result_padding"
                android:paddingBottom="@dimen/text_result_padding"
                android:textSize="@dimen/text_main_size"
                android:id="@+id/textResult" />

        </ScrollView>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2">

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <TableRow android:layout_weight="1">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/one"
                    android:onClick="onClickNumber"
                    android:textSize="@dimen/main_text_size" />
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/two"
                    android:onClick="onClickNumber"
                    android:textSize="@dimen/main_text_size" />
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/three"
                    android:onClick="onClickNumber"
                    android:textSize="@dimen/main_text_size" />
            </TableRow>
            <TableRow android:layout_weight="1">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/four"
                    android:onClick="onClickNumber"
                    android:textSize="@dimen/main_text_size" />
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/five"
                    android:onClick="onClickNumber"
                    android:textSize="@dimen/main_text_size" />
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/six"
                    android:onClick="onClickNumber"
                    android:textSize="@dimen/main_text_size" />
            </TableRow>
            <TableRow android:layout_weight="1">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/seven"
                    android:onClick="onClickNumber"
                    android:textSize="@dimen/main_text_size" />
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/eight"
                    android:onClick="onClickNumber"
                    android:textSize="@dimen/main_text_size" />
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/nine"
                    android:onClick="onClickNumber"
                    android:textSize="@dimen/main_text_size" />
            </TableRow>
            <TableRow android:layout_weight="1"
                android:layout_gravity="top">
                <Button
                    android:id="@+id/button_frac"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/comma"
                    android:onClick="onClick"
                    android:textSize="@dimen/main_text_size" />
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/zero"
                    android:onClick="onClickNumber"
                    android:textSize="@dimen/main_text_size" />
                <Button
                    android:id="@+id/button_equal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/equal"
                    android:onClick="onClick"
                    android:textSize="@dimen/main_text_size" />
            </TableRow>

        </TableLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button_clear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/clear"
                android:onClick="onClick"
                android:layout_weight="1"
                android:textSize="@dimen/main_text_size"
                android:longClickable="false" />
            <Button
                android:id="@+id/button_degree"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/degree"
                android:onClick="onClick"
                android:layout_weight="1"
                android:textSize="@dimen/main_text_size"  />
            <Button
                android:id="@+id/button_minute"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/minute"
                android:onClick="onClick"
                android:layout_weight="1"
                android:textSize="@dimen/main_text_size"  />
            <Button
                android:id="@+id/button_plus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/plus"
                android:onClick="onClick"
                android:layout_weight="1"
                android:textSize="@dimen/main_text_size" />
            <Button
                android:id="@+id/button_minus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/minus"
                android:onClick="onClick"
                android:layout_weight="1"
                android:textSize="@dimen/main_text_size" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>